--- a/templates/basic-java/src/main/resources/i18n/messages.properties
+++ b/templates/basic-java/src/main/resources/i18n/messages.properties
@@ -1,5 +1,6 @@
-app.main.title=${PROJECT_NAME}
-app.main.welcome=Bienvenue dans ${PROJECT_NAME}.
+app.main.name=${PROJECT_NAME}
 app.main.author=${AUTHOR_NAME}
 app.main.version=${PROJECT_VERSION}
 app.main.year=${PROJECT_YEAR}
+app.message.welcome=Bienvenue dans ${PROJECT_NAME}.
+app.message.exit=Appuyez sur [ÉCHAP] pour quitter
