--- a/docs/man/man1/genj.1
+++ b/docs/man/man1/genj.1
@@ -1,4 +1,4 @@
-.TH GENJ 1 "November 2025" "genj 1.2.2" "User Commands"
+.TH GENJ 1 "November 2025" "genj 1.3.1" "User Commands"
 .SH NAME
 genj \- Generate a Java project from a template
 .SH SYNOPSIS
@@ -55,6 +55,9 @@ Gradle version for \fB.sdkmanrc\fR (default: \fB8.5\fR).
 .TP
 .BI \-l,\ \-\-vendor_name " NAME"
 Vendor name (usable in templates) (default: \fBVendor\fR).
+.TP
+.BI \-\-verbose
+Enable verbose output: print detailed processing information (file and directory operations, replacements, zip extraction details, git/vscode setup) to the terminal for debugging and tracing the generation workflow.
 .SH REPLACEMENT VARIABLES
 The following patterns are replaced in files and file names:
 .TP
@@ -130,7 +133,7 @@ For information on how to create custom templates, see
 .SH AUTHOR
 Frédéric Delorme
 .SH VERSION
-1.2.2
+1.3.1
 .SH SEE ALSO
 .TP
 .BR genj-template (5)
